--- a/KpPenggajian/nbproject/project.properties
+++ b/KpPenggajian/nbproject/project.properties
@@ -77,7 +77,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=KpPenggajian
-main.class=
+main.class=form.DATA_PEGAWAI
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
